src/test/run-pass/early-ret-binop-add.rs
fn wsucc(n: int) -> int { 0 + { ret n + 1 } }
fn main() { }
